# needletail

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  align.mjs  bench.mjs  bench.py  bench_all_hits.py  bench_annotate_saccer3.py  bench_guide_design.py  bench_parquet_sink.py  index.d.ts  index.js  package-lock.json  package.json  pyproject.toml  recall_test.py  recall_test_large.py  vitest.config.ts
.github/workflows/: docs.yml
crates/needletail-core/: Cargo.toml
crates/needletail-core/examples/: Annotate_ZM56TN_WLP001.rs  demo.rs
crates/needletail-core/src/: chemistry.rs  geometry.rs  lib.rs
crates/needletail-core/src/annotation/: feature.rs  locus.rs  mod.rs  sweep.rs
crates/needletail-core/src/engine/: fm_index.rs  kmer_index.rs
crates/needletail-core/src/io/: genbank.rs  json.rs  mod.rs  parquet_hits.rs  parquet_regions.rs  persist.rs
crates/needletail-py/: Cargo.toml
crates/needletail-py/src/: lib.rs
crates/needletail-server/: Cargo.toml
crates/needletail-server/src/: jobs.rs  main.rs
docs/: MEMORY.md  assessment.md  plan.md  strand-integration.md
docs/transcripts/: ce5dae56-c81f-44eb-9a69-f723bfc85e11.jsonl
presets/: naming.yaml
python/: needletail_guides.py
src/: error.rs  fm_index.rs  geometry.rs  kmer_index.rs  lib.rs  parquet_sink.rs  persist.rs  simd_search.rs  strand.rs
src/engine/: mod.rs  simd_search.rs
src/io/: mod.rs
src/operations/: mod.rs  pam_scanner.rs
test/: basic.test.ts  saccer3.test.ts  synthetic.test.ts
test/fixtures/: README.md  synthetic_genome.gb  test_genome.fa
(+14 files in other folders)
