[package]
name = "needletail-aligner"
version = "0.2.0"
edition = "2021"

[lib]
name = "needletail"
crate-type = ["cdylib"]

[dependencies]
pyo3     = { version = "0.23", features = ["extension-module", "abi3-py39"] }
bio      = "1"
anyhow   = "1"
memmap2  = "0.9"
tempfile = "=3.10.1"
rayon    = "1"
rkyv     = { version = "0.8", features = ["bytecheck"] }
libc     = "0.2"
arrow    = { version = "54", default-features = false, features = ["ffi"] }
parquet  = { version = "54", default-features = false, features = ["arrow", "snap"] }

[profile.release]
lto = true
